--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@gsap/react": "^2.1.2",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.11.0",
+    "canvg": "^4.0.3",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
+    "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.2",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.540.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
